fixed alignment of phone_shoppingListDelete component . and font size

--- a/frontend/src/app/pages/phone_shoppingListDelete/phone_shoppingListDelete.component.scss
+++ b/frontend/src/app/pages/phone_shoppingListDelete/phone_shoppingListDelete.component.scss
@@ -63,7 +63,7 @@
             margin: 0;
             border-radius: 5px;
             cursor: pointer;
-            font-size: 2vw; // Ensure the font size is responsive
+            font-size: 3vw; // Ensure the font size is responsive
             width: 3em;
           }
           span {
